deployments/kubernetes/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
      - name: application
        image: ghcr.io/robkenis/workshop-kubernetes-gitops/application:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web
        resources:
          limits:
            memory: 10Mi
          requests:
            cpu: 10m
            memory: 10Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: web
        readinessProbe:
          httpGet:
            path: /healthz
            port: web
