deployments/kubernetes/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application
spec:
  ports:
  - name: web
    port: 80
    targetPort: web
  selector:
    app: application
